video, thumbnail 업로드

--- a/package.json
+++ b/package.json
@@ -33,5 +33,6 @@
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
     "vite": "^5.2.0"
-  }
+  },
+  "proxy": "http://api-skyst.mirix.kr"
 }
