--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.15.1",
     "react-router-dom": "^6.22.3",
+    "react-video-thumbnail": "^0.1.3",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
